DB- firebase Skapa konto logga in

--- a/SupLogin/Base.lproj/Main.storyboard
+++ b/SupLogin/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
         <!--Home View Controller-->
         <scene sceneID="Hgn-xY-Yq0">
             <objects>
-                <viewController id="o08-XW-MRa" customClass="HomeViewController" customModule="SupLogin" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeVC" id="o08-XW-MRa" customClass="HomeViewController" customModule="SupLogin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="p43-3K-AzY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -117,12 +117,12 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="DrA-F2-qJC">
                                 <rect key="frame" x="40" y="84" width="334" height="230.5"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6I6-Vz-Fqx">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6I6-Vz-Fqx">
                                         <rect key="frame" x="0.0" y="0.0" width="334" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Q8-O1-8QS">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Q8-O1-8QS">
                                         <rect key="frame" x="0.0" y="70" width="334" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -137,7 +137,7 @@
                                             <action selector="loginTapped:" destination="aEk-2y-RjH" eventType="touchUpInside" id="4qg-N1-cUA"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYe-l6-nZy">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYe-l6-nZy">
                                         <rect key="frame" x="0.0" y="210" width="334" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -160,10 +160,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="zCx-WC-uGY"/>
                     <connections>
+                        <outlet property="emailTextField" destination="6I6-Vz-Fqx" id="Llh-rE-cvX"/>
                         <outlet property="errorLabel" destination="iYe-l6-nZy" id="pce-5I-EOs"/>
-                        <outlet property="firstNameTextField" destination="6I6-Vz-Fqx" id="YB6-lN-1RP"/>
-                        <outlet property="lastNameTextField" destination="8Q8-O1-8QS" id="FjD-a1-fsN"/>
                         <outlet property="loginButton" destination="u1m-Al-HYs" id="TNF-3m-bzI"/>
+                        <outlet property="passwordTextField" destination="8Q8-O1-8QS" id="a5T-NY-NZa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pLr-i7-5dq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
