--- a/SupLogin/Base.lproj/Main.storyboard
+++ b/SupLogin/Base.lproj/Main.storyboard
@@ -118,12 +118,36 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Tap to change profile picture"/>
                                 <connections>
-                                    <action selector="didTapButton" destination="o08-XW-MRa" eventType="touchUpInside" id="hkD-KP-rJj"/>
+                                    <action selector="didTapButton" destination="o08-XW-MRa" eventType="touchUpInside" id="WuX-jz-C7I"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8gs-US-zkN" customClass="logOutTapped">
                                 <rect key="frame" x="352" y="64" width="52" height="30"/>
                                 <state key="normal" title="Log out"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ujp-1E-EwD">
+                                <rect key="frame" x="41" y="361" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="fetchName" destination="o08-XW-MRa" eventType="touchUpInside" id="PKa-7Y-ZoN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rIu-Hi-2OL">
+                                <rect key="frame" x="232" y="361" width="95" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Upload image"/>
+                                <connections>
+                                    <action selector="didTapButton" destination="o08-XW-MRa" eventType="touchUpInside" id="Wug-KB-7Hf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCy-Es-Yie">
+                                <rect key="frame" x="162" y="548" width="90" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Search users"/>
+                                <connections>
+                                    <segue destination="NHt-nq-Vx3" kind="show" id="8ic-oH-lg5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="UbB-jy-umF"/>
@@ -137,9 +161,6 @@
                             <constraint firstItem="wBC-bx-oaF" firstAttribute="top" secondItem="UbB-jy-umF" secondAttribute="top" constant="15" id="yae-1K-AJO"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="profilePictureView" destination="TIC-Sy-vjc" id="vYq-Wg-Ed8"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1kV-Jh-x4u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -303,6 +324,65 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ivo-gg-VKO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1048" y="892"/>
+        </scene>
+        <!--Search Users Table View Controller-->
+        <scene sceneID="D9J-hC-XmD">
+            <objects>
+                <tableViewController id="16q-ra-dua" customClass="SearchUsersTableViewController" customModule="SupLogin" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="oYK-wo-Qa0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="6eS-fb-XWP">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6eS-fb-XWP" id="1J5-Rd-IL8">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="16q-ra-dua" id="4J3-ea-fwR"/>
+                            <outlet property="delegate" destination="16q-ra-dua" id="Fjb-M0-Wer"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="cWP-m3-lJV">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="stop" id="qxr-q1-JKV">
+                            <connections>
+                                <action selector="dismissSearchUsersTableView:" destination="16q-ra-dua" id="hbZ-Lf-SW2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="searchUsersTableView" destination="oYK-wo-Qa0" id="dxm-kH-qKU"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KGo-qm-bST" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2934.7826086956525" y="134.59821428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="l6k-kP-ixH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NHt-nq-Vx3" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Wtq-Dg-5nV"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Q5L-cY-N9f">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="16q-ra-dua" kind="relationship" relationship="rootViewController" id="SL1-Hm-Yfk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E0E-j5-oyj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2024.6376811594205" y="134.59821428571428"/>
         </scene>
     </scenes>
     <resources>
